[metadata]
name = mazes
version = 1.0.0
description = Following along with Mazes for Programmers
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license_file = LICENSE

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_version = >=3.6, <4

[options.packages.find]
where = src
exclude = tests

[options.extras_require]
test =
    pytest
    coverage

[flake8]
max-line-length = 120